clusters/cluster0/kubernetes/apps/media/pinepods/app/pinepods-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: pinepods
  ports:
    - name: http
      port: 8040
      protocol: TCP
      targetPort: 8040
