clusters/cluster0/kubernetes/apps/media/pinepods/app/pinepods-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pinepods
  namespace: media
spec:
  hostnames:
  - pinepods.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: pinepods-service
      port: 8040
    matches:
    - path:
        type: PathPrefix
        value: /
